--- a/index.html
+++ b/index.html
@@ -21,24 +21,33 @@
         <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
       </nav>
     </header>
-    <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
 
-    <!--
-    foldername/ = go inside the folder.
-    filename = use a file in the current folder.
-    ../ = leavethe current folder and go up to parent folder.
-    -->
+    <section id="featured-property">
+      <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
 
-    <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
+      <!--
+      foldername/ = go inside the folder.
+      filename = use a file in the current folder.
+      ../ = leavethe current folder and go up to parent folder.
+      -->
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
+      <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
 
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
+  </section>
+
+    <section id="promotional">
     <!-- promo video -->
 
-     <video controls>
-       <source src="https://youtu.be/Hvp1Ojw-2A4">
-       <!-- <source src="videos/cats.ogg" type="video/ogg"> -->
-       Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser.</a>
-     </video>
+       <video controls>
+         <source src="https://youtu.be/Hvp1Ojw-2A4">
+         <!-- <source src="videos/cats.ogg" type="video/ogg"> -->
+         Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser.</a>
+       </video>
+    </section>
+
+    <footer>
+      &copy; 2014 Exceptional Realty. All Rights Reserved.
+    </footer>
   </body>
 </html>
