--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
 
     <section id="promotional">
     <!-- promo video -->
-
-       <video controls>
-         <source src="https://youtu.be/Hvp1Ojw-2A4">
-         <!-- <source src="videos/cats.ogg" type="video/ogg"> -->
-         Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser.</a>
-       </video>
+      <figure>
+         <video controls>
+           <source src="https://youtu.be/Hvp1Ojw-2A4">
+           <!-- <source src="videos/cats.ogg" type="video/ogg"> -->
+           Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser.</a>
+         </video>
+         <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
+     </figure>
     </section>
 
     <footer>
