--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <!-- promo video -->
       <figure>
          <video controls>
-           <source src="https://youtu.be/Hvp1Ojw-2A4">
-           <!-- <source src="videos/cats.ogg" type="video/ogg"> -->
+           <source src="/Users/sadiebennett/.atom/.learn-ide/home/blithe-hacker-0535/fe-code-along-ex-2-prework/videos/real-estate.mp4" type="video/mp4">
+           <source src="videos/real-estate.ogg" type="video/ogg">
            Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser.</a>
          </video>
          <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
